== 1.4.1 2010-04-23

* Method amount_field considers given option "name" and "id":
  <% form_for(@manager) do |f| %>
    <%= f.amount_field :salary, :name => :salary, :id => "salary_id" %>
    ...
  =>
  <input name="salary" id="salary_id" ... /> instead of 
  <input name="manager[amount_field_value]" id="manager_salary"... />

== 1.4.0 2009-10-06

* fix: negative values like '-1,00', '-1,0', '-1,' or '-1' are considered valid
* add test for '-value' and '+value'
* more test values and easier usage in tests

== 1.3.0 2009-09-06

* fix: helper amount_field_tag no works as expected (accepting name and value instead of object and method)
* add helper amount_field for ActionView::Base and amount_field for ActionView::Helpers::FormBuilder
* use an instance variable internally for the original assigned value and remove class AssignedValue

== 1.2.0 2009-09-04

* fix: an invalid value is still invalid after multiple calls to valid?

== 1.1.0 2009-08-31

* Fix "undefined method `to_f' for [...]:Array" by supported attribute of type float 
  (even if it is not a good idea to use float for amount because of rounding errors)
* Default configuration uses I18n.t('number.amount_field.format') from the plugin file
  amount_field/locale/(en|de).yml. This means the default configuration depends on I18n.locale
  and is not necessarily the german format by default anymore.
* The delimiter, separator and precision are now optional, so "1.234,00", "1234,00" and "1234" are
  all valid at the same time.

== 1.0.2 2009-08-07

* fix typo and update readme concerning installation

== 1.0.1 2009-08-07

* Bugfix: a given format option for one amount field does not manipulate the default configuration

== 1.0.0 2009-07-28

* Initial release
